--- a/src/components/Solutions.css
+++ b/src/components/Solutions.css
@@ -1,6 +1,6 @@
-.solutions-title{
-    font-family: 'Dancing Script', cursive;
-    color: #40916C;
-    text-align: center;
-    padding: 30px 0px 30px 0px;
+.solutions-title {
+  font-family: "Dancing Script", cursive;
+  color: #40916c;
+  text-align: center;
+  padding: 30px 0px 30px 0px;
 }
