--- a/src/components/BodyResult.css
+++ b/src/components/BodyResult.css
@@ -1,29 +1,33 @@
 /* body page resultat */
 .bodytext {
-    width: 100%;
-    margin-top: 5%;
-    font-size: 15px;
-    color: #40916C;
-    font-family: 'Dancing Script', cursive;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  margin-top: 5%;
+  font-size: 15px;
+  color: #40916c;
+  font-family: "Dancing Script", cursive;
+  display: flex;
+  justify-content: center;
 }
 @media only screen and (min-width: 360px) {
-    .bodytext {
-        font-size: 20px;
-}}
+  .bodytext {
+    font-size: 20px;
+  }
+}
 @media only screen and (min-width: 420px) {
-    .bodytext {
-        font-size: 25px;
-}}
+  .bodytext {
+    font-size: 25px;
+  }
+}
 @media only screen and (min-width: 640px) {
-    .bodytext {
-        font-size: 35px;
-}}
+  .bodytext {
+    font-size: 35px;
+  }
+}
 @media only screen and (min-width: 1000px) {
-    .bodytext {
-        margin-top: 5%;
-        font-size: 35px;
-}}
+  .bodytext {
+    margin-top: 5%;
+    font-size: 35px;
+  }
+}
 
 /* fin body page resultat */
