--- a/src/components/Info.css
+++ b/src/components/Info.css
@@ -1,72 +1,70 @@
 .visible {
-    display: flex; 
+  display: flex;
 }
 
 .invisible {
-    display: none;
+  display: none;
 }
 
 .Info {
-    background-color: #B7E4C7;
+  background-color: #b7e4c7;
 }
 
 h2 {
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    color: #40916C;
-    font-size: 20px;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  color: #40916c;
+  font-size: 20px;
 }
 
 .Info img {
-    margin-left: 10px;
-    width: 300px;
-   height: 100px;  
-   margin-bottom: 10px;
-   padding-left: 60px;
+  margin-left: 10px;
+  width: 300px;
+  height: 100px;
+  margin-bottom: 10px;
+  padding-left: 60px;
 }
 
 .Info-Button3 {
-    
-    height: 40px;
-    width: 130px;
-    border-radius: 50px;
-    font-family: 'Happy Monkey', cursive;
-    margin-top: auto;
-    margin-bottom: auto;
-    justify-content: center;
-    color: black;
+  height: 40px;
+  width: 130px;
+  border-radius: 50px;
+  font-family: "Happy Monkey", cursive;
+  margin-top: auto;
+  margin-bottom: auto;
+  justify-content: center;
+  color: black;
 }
 
 .Info-Button3:hover {
-    color: black;
-    background-color: #74C69D;
+  color: black;
+  background-color: #74c69d;
 }
 
 .Info-container-button {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .Info-Image3 {
-    display: flex;
-    align-items: center;
-    padding-top: 10px;
+  display: flex;
+  align-items: center;
+  padding-top: 10px;
 }
 
 .Info-Button3 {
-    width: 80px;
-    height: 20px;
-    font-size: 8px;
+  width: 80px;
+  height: 20px;
+  font-size: 8px;
 }
 
-@media screen and (max-width:420px){
-    .Info {
-        margin-top: 10px;
-        display: flex;
-        flex-direction: column;
-    }
-
+@media screen and (max-width: 420px) {
+  .Info {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+  }
 }
