--- a/src/components/LegalNotice.css
+++ b/src/components/LegalNotice.css
@@ -1,35 +1,35 @@
 .LegalNoticeTitle {
-    text-decoration: underline;
-    margin: 20px 0 10px 0;
-    display: flex;
-    justify-content: space-around;
-    font-size: 15px;
-    font-weight: bolder;
-    color: #40916C;
+  text-decoration: underline;
+  margin: 20px 0 10px 0;
+  display: flex;
+  justify-content: space-around;
+  font-size: 15px;
+  font-weight: bolder;
+  color: #40916c;
 }
 
 .LegalNoticeText {
-    margin: 10px 15px 20px 15px;
-    font-size: 11px;
-    color: #B7E4C7;
-    font-family: 'Roboto', sans-serif;
+  margin: 10px 15px 20px 15px;
+  font-size: 11px;
+  color: #b7e4c7;
+  font-family: "Roboto", sans-serif;
 }
 
 @media only screen and (min-width: 420px) {
-    .LegalNoticeTitle{
-        font-size: 15px;
-    }
-    .LegalNoticeText {
-        margin: 10px 30px 30px 30px;
-        font-size: 12px;
-    }
+  .LegalNoticeTitle {
+    font-size: 15px;
+  }
+  .LegalNoticeText {
+    margin: 10px 30px 30px 30px;
+    font-size: 12px;
+  }
 }
 @media only screen and (min-width: 1100px) {
-    .LegalNoticeTitle{
-        font-size: 20px;
-    }
-    .LegalNoticeText {
-        margin: 20px 100px 30px 60px;
-        font-size: 16px;
-    }
+  .LegalNoticeTitle {
+    font-size: 20px;
+  }
+  .LegalNoticeText {
+    margin: 20px 100px 30px 60px;
+    font-size: 16px;
+  }
 }
