--- a/src/components/MailForm.css
+++ b/src/components/MailForm.css
@@ -1,7 +1,7 @@
 .MailForm {
   display: flex;
   padding-left: 10px;
-  background-color: #74C69D;
+  background-color: #74c69d;
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -16,23 +16,23 @@
 }
 
 .inputAboutUs {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-radius: 5px;
 }
 
 textarea {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-radius: 5px;
 }
 
 .envoyer {
   border-radius: 10px;
   padding: 8px 16px;
-  border:none;
+  border: none;
   margin-top: 10px;
 }
 
 .envoyer:hover {
   color: black;
-  background-color: #B7E4C7;
+  background-color: #b7e4c7;
 }
