--- a/src/components/Titre.css
+++ b/src/components/Titre.css
@@ -1,12 +1,10 @@
 h1 {
-    font-family: 'Dancing Script', cursive;
-    font-size: 40px;
-    text-align: center;
-    color:  #40916C
+  font-family: "Dancing Script", cursive;
+  font-size: 40px;
+  text-align: center;
+  color: #40916c;
 }
 
 .Titre {
-    height: 90px;
-    
+  height: 90px;
 }
-
