--- a/src/components/UserPage.css
+++ b/src/components/UserPage.css
@@ -8,6 +8,9 @@
     margin: auto;
     min-height: 100vh;
 }
+.UserPageContainer button:focus{
+    outline: none !important;
+}
 .UserPageHeader{
     width: 100%;
     display: flex;
@@ -72,7 +75,7 @@
     margin-right: 10px;
     cursor: pointer;
 }
-.UserPageModifiedInfo, .calculator, .UserPageHistorical{
+.UserPageModifiedInfo, .calcul, .UserPageHistorical{
     margin-top: 18px;
     width: 100%;
     background-color: #D8F4DC;
@@ -111,10 +114,13 @@
     margin: 20px 0px;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
 }
-
+.afterResult span{
+    margin-top: 30px;
+}
 .UserPageHistorical{
     display: flex;
     flex-direction: column;
@@ -132,4 +138,7 @@
 }
 .calculator{
     width: 100%;
+}
+.invisible{
+    display: none;
 }
