--- a/src/components/UserPage.css
+++ b/src/components/UserPage.css
@@ -3,10 +3,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     max-width: 1400px;
     margin: auto;
-    min-height: 100vh;
+    min-height: 80vh;
 }
 .UserPageContainer button:focus{
     outline: none !important;
@@ -14,6 +14,7 @@
 .UserPageHeader{
     width: 100%;
     display: flex;
+    align-items: center;
     justify-content: space-between;
     padding-top: 10px;
 }
@@ -42,7 +43,7 @@
     height: 500px;
 }
 .UserPageImgProfils {
-    margin: 30px auto 0px auto;
+    margin: 30px auto 10px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -58,14 +59,11 @@
     align-items: center;
     justify-content: center;
 }
-.UserPageInfo{
-    padding: 10px;
-    width: 100%;
-    margin: 40px 0px;
-}
+
 .UserPageButton{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 10px;
 }
 .UserPageButton-btn{
     padding: 8px 12px;
@@ -76,7 +74,7 @@
     cursor: pointer;
 }
 .UserPageModifiedInfo, .calcul, .UserPageHistorical{
-    margin-top: 18px;
+    margin: 18px 0px;
     width: 100%;
     background-color: #D8F4DC;
     position: relative;
@@ -141,4 +139,23 @@
 }
 .invisible{
     display: none;
+}
+
+@media screen and (max-width: 496px){
+    .UserPageHeader{
+        align-items: center;
+        flex-direction: column;
+        padding: 0px !important;
+        margin: 10px 0px;
+    }
+    .UserPageCurrenntUser{
+        margin-top: 10px;
+        text-align: center;
+    }
+    .UserPageButton{
+        flex-direction: column;
+    }
+    .UserPageButton button{
+        margin-top: 7px;
+    }
 }
