--- a/src/components/Result.css
+++ b/src/components/Result.css
@@ -5,7 +5,6 @@
 .invisible {
     display: none ;
 }
-
 .result {
     width: 80%;
     border-radius: 10px;
@@ -27,9 +26,7 @@
     color: #40916C;
 }
 .score-text {
-    margin: 20px 30px 20px 30px;
-    margin-bottom: 20px;
-    margin-top: 20px; 
+    margin: 10px 20px 10px 20px;
     font-weight: bold;
     font-size: 8px;
     justify-content: center;
@@ -66,16 +63,18 @@ animation-iteration-count:infinite;
     animation-iteration-count:infinite;
     }
 .resultText {
+    
     margin-top: auto;
     margin-bottom: auto;
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100px;
     color: #1B4332;
     border: none;
     font-size: 14px;
     font-weight: bold;
-    background:#74C69D;
+    background:#1a0b70;
     font-family: 'Roboto', sans-serif;
 }
 @media only screen and (min-width: 360px) {
