--- a/src/components/Solution.css
+++ b/src/components/Solution.css
@@ -27,9 +27,8 @@
     background:#74C69D;
     font-family: 'Roboto', sans-serif;
 } 
-.imgGlobalwarming {
-    border-radius: 10px;
-    width: 60%;
+.image-result {
+    width: 100%;
 }
 
 @media only screen and (min-width: 360px) {
@@ -49,7 +48,7 @@
         margin-bottom: 10%;
         font-size: 18px;
     }
-    .imgGlobalwarming {
+    .image-result {
         border-radius: 10px;
         width: 50%;
 }}
@@ -60,7 +59,7 @@
         margin-bottom: 5%;
         width: 30%;
 }
-.imgGlobalwarming {
+.image-result {
     border-radius: 10px;
     width: 35%;
 }}
