--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -2,7 +2,13 @@
 .ContainerCalculator select:focus {
   outline: none;
 }
-
+.ContainerCalculator{
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .calculatorTitle {
   display: flex;
   justify-content: center;
@@ -88,7 +94,7 @@
 
 .calculatorBloc {
   background-color: #b7e4c7;
-  padding: 20px 0 20px 0;
+  padding: 20px 10px 20px 10px;
   margin: 0 20px 0 20px;
 }
 
