--- a/src/components/UserPage.css
+++ b/src/components/UserPage.css
@@ -48,8 +48,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
 }
-.UserPageImgProfils div{
+/* .UserPageImgProfils div{
     width: 140px;
     height: 140px;
     border-radius: 50%;
@@ -58,7 +59,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
+} */
 
 .UserPageButton{
     display: flex;
@@ -158,4 +159,25 @@
     .UserPageButton button{
         margin-top: 7px;
     }
+}
+.message-result-user{
+    color: black;
+    font-weight: 600;
+}
+.formchoiceAvatar{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+}
+.allInputUser{
+    display:flex;
+    justify-content: space-evently;
+}
+.groupeRadio{
+    display: flex;
+    align-items: center;
+}
+.imgchoiceavatar{
+    width: 50px;
+    margin-left: 5px;
 }
