--- a/src/components/Titre.css
+++ b/src/components/Titre.css
@@ -1,10 +1,7 @@
-h1 {
-  font-family: "Dancing Script", cursive;
-  font-size: 40px;
-  text-align: center;
-  color: #40916c;
-}
-
 .Titre {
-    height: 90px;
+    font-family: "Dancing Script", cursive;
+    font-size: 25px;
+    text-align: center;
+    color: #40916c;
+    margin: 20px;
 }
