--- a/src/components/Info.css
+++ b/src/components/Info.css
@@ -2,9 +2,9 @@
   background-color: #b7e4c7;
   margin-bottom: 20px;
   padding-top: 10px;
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
+  /* width: 70%; */
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .coordonnees {
@@ -15,6 +15,7 @@
 .infosTexte{
   display:flex;
   margin-left: 10px;
+  justify-content: space-between
 }
 
 .titleContact {
@@ -22,6 +23,7 @@
   text-align: center;
   color: #40916c;
   font-size: 20px;
+  padding: 10px;
 }
 
 .coordonnees-box {
@@ -51,7 +53,6 @@
     background-color: #1b4332;
 }
 
-
 .Info-Button3:hover {
   color: #74c69d;
   background-color: white;
@@ -68,6 +69,30 @@
 }
 
 .Image-info {
-  width: 150px;
+  max-width: 150px;
+  width: 50%;
   margin-right: 50px;
 }
+
+@media only screen and (max-width: 510px) {
+  .infosTexte {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .Info{
+    width: 100%;
+    margin: 0;
+    }
+
+  .Image-info {
+    margin: 0;
+    padding: 20px;
+    min-width: 100px;
+  }
+  .Info-Button3{
+    width: 100px;
+    font-size: 10px;
+  }
+}
+
