--- a/src/components/UserPage.css
+++ b/src/components/UserPage.css
@@ -12,7 +12,9 @@
     outline: none !important;
 }
 .UserPageHeader{
-    width: 100%;
+    max-width: 1400px;
+    margin: 0px auto;
+    width: 90%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -43,24 +45,14 @@
     height: 500px;
 }
 .UserPageImgProfils {
-    margin: 30px auto 10px auto;
+    margin: 30px auto 30px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     width: 100%;
+    height: 200px;
 }
-/* .UserPageImgProfils div{
-    width: 140px;
-    height: 140px;
-    border-radius: 50%;
-    border: 1px solid #D8F4DC;
-    box-shadow: 1px 3px 14px #D8F4DC;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
-
 .UserPageButton{
     display: flex;
     justify-content: space-between;
@@ -78,7 +70,6 @@
     margin: 18px 0px;
     width: 100%;
     background-color: #D8F4DC;
-    position: relative;
     padding: 10px 0px;
 }
 .UserPageToggleTitle{
@@ -96,6 +87,11 @@
 }
 .InputUserPageModified{
     margin: 10px 0px;
+    height: 20px;
+    border-radius: 10px;
+    padding: 3px;
+    color: #40916c;
+    font-family: "Roboto";
 }
 .UserPageCurrenntUser{
     color: #2F3E46;
@@ -166,12 +162,15 @@
 }
 .formchoiceAvatar{
     display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     justify-content: space-evenly;
 }
 .allInputUser{
     display:flex;
-    justify-content: space-evently;
+    justify-content: space-evenly;
+    width: 100%;
 }
 .groupeRadio{
     display: flex;
@@ -180,4 +179,25 @@
 .imgchoiceavatar{
     width: 50px;
     margin-left: 5px;
+}
+.AvatarVisible{
+    width: 100px;
+    height: 100px;
+}
+.AvatarVisible img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.button-choiceAvatar{
+    padding: 8px 10px;
+    border-radius: 8px;
+    background-color: #D8F4DC;
+    color: #2F3E46;
+    font-weight: 700;
+    letter-spacing: 1.1px;
+    text-transform: uppercase;
+}
+.InputUserPageModified:focus, .calculator-input:focus{
+    outline:none;
 }
