--- a/src/components/UserPage.css
+++ b/src/components/UserPage.css
@@ -3,10 +3,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     max-width: 1400px;
     margin: auto;
-    min-height: 80vh;
+    min-height: 81vh;
 }
 .UserPageContainer button:focus{
     outline: none !important;
@@ -51,7 +51,6 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 200px;
 }
 .UserPageButton{
     display: flex;
@@ -165,11 +164,13 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    height: 200px;
     justify-content: space-evenly;
 }
 .allInputUser{
     display:flex;
     justify-content: space-evenly;
+    max-width: 700px;
     width: 100%;
 }
 .groupeRadio{
@@ -200,4 +201,11 @@
 }
 .InputUserPageModified:focus, .calculator-input:focus{
     outline:none;
+}
+.userNameSpan{
+    color: #1B4332;
+    font-weight: 700;
+    font-size: 1rem;
+    letter-spacing: 1.1px;
+    text-transform: capitalize;
 }
