--- a/src/components/UserPage.css
+++ b/src/components/UserPage.css
@@ -103,6 +103,7 @@
     justify-content: center;
     font-weight: 600;
     display: none;
+    color: red;
 }
 .afterResult{
     margin: 20px 0px;
@@ -208,4 +209,10 @@
     font-size: 1rem;
     letter-spacing: 1.1px;
     text-transform: capitalize;
+}
+.modified-avatar-already{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px auto;
 }
