--- a/src/components/UserPage.css
+++ b/src/components/UserPage.css
@@ -75,8 +75,8 @@
     color: black;
     font-size: 1.3rem;
     text-align: center;
-    width: 100%;
     margin-bottom: 30px;
+    padding:0 !important;
 }
 .UserPageToggleContainerInput{
     display: flex;
@@ -215,4 +215,7 @@
     flex-direction: column;
     align-items: center;
     margin: 10px auto;
+}
+#vehiculeSelect:focus{
+    outline: none;
 }
