--- a/src/components/UserPage.css
+++ b/src/components/UserPage.css
@@ -65,7 +65,7 @@
     margin-right: 10px;
     cursor: pointer;
 }
-.UserPageModifiedInfo, .calcul, .UserPageHistorical{
+.UserPageModifiedInfo, .UserPageCalcul, .UserPageHistorical{
     margin: 18px 0px;
     width: 100%;
     background-color: #D8F4DC;
@@ -77,6 +77,7 @@
     text-align: center;
     margin-bottom: 30px;
     padding:0 !important;
+    text-decoration: underline;
 }
 .UserPageToggleContainerInput{
     display: flex;
@@ -214,8 +215,32 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10px auto;
+    margin: 20px auto;
+    padding: 20px 0px;
+}
+.modified-avatar-already button{
+    margin-top: 10px;
 }
 #vehiculeSelect:focus{
     outline: none;
+}
+.line-p{
+    font-size: 1rem;
+    font-family: "Roboto";
+}
+.line-p span{
+    color: #2F3E46;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+.inputNewUsername{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+.MessagePasswords{
+    color: #2F3E46;
+    font-weight: 700;
+    font-size: 1rem;
+    margin: 5px 0px;
 }
