--- a/src/components/Homepage.css
+++ b/src/components/Homepage.css
@@ -6,7 +6,9 @@
   height: 100%;
   width: 100%;
 }
-
+.desktop{
+  width: 100%;
+}
 .homepage-title {
   font-size: 4rem;
   color: black;
@@ -145,34 +147,70 @@
     font-size: 70px;
     position: absolute;
     top: 25%;
-    z-index: 1;
     left: 25%;
     right: 25%;
 }
-.slides .slick-prev,
-.slides .slick-next {
-  position: absolute;
-  top: 50%;
-  z-index: 1;
-}
 
-
-.slides {
+.carouselHead{
   position: relative;
-  width: 100vw;
+  border:1px solid red;
+  overflow: hidden;
+  height:50vh;
+  width:80%;
+}
+.imgCarousel{
+  width: 100% !important;
+  height:100%;
+}
+.slides {
+  position: absolute;
+  width: 100%;
+  height:100%;
 }
 
-.slides .slick-prev,
-.slides .slick-next {
+.slick-prev,
+.slick-next {
   position: absolute;
   top: 50%;
   z-index:1;
+  border: 1px solid white;
+  padding:10px 10px;
+  cursor:pointer;
 }
 
-.slides .slick-prev {
+.slick-prev {
   left: 5%;
 }
 
-.slides .slick-next {
+.slick-next {
   right: 5%;
+  z-index:100;
+}
+
+#caption-0{
+  animation: img1 4s 16s linear infinite;
+}
+#caption-1{
+  animation: img1 4s  12s linear infinite;
+}
+#caption-2{
+  animation: img1 4s 8s linear infinite;
+}
+#caption-3{
+  animation: img1 4s 4s linear infinite
+}
+#caption-4{
+  animation: img1 4s linear infinite
+}
+
+
+@keyframes img1{
+  from{
+    opacity: 0;
+    z-index:-10;
+  }to{
+    opacity:1;
+    z-index: 10;
+    
+  }
 }
