--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -7,6 +7,7 @@
   max-width: 250px;
   width: 100%;
   padding-bottom: 20px;
+  margin-bottom: 16px;
 }
 .solutions-vertClair {
   background: #b7e4c7;
